small link change

--- a/_posts/2021-04-01-up-to-date-norfolk-portsmouth-virginia-historical-synagogue-jewish-cemeteries.html
+++ b/_posts/2021-04-01-up-to-date-norfolk-portsmouth-virginia-historical-synagogue-jewish-cemeteries.html
@@ -22,7 +22,7 @@ I will include whatever information I could quickly find online, but I did not t
 1. <b>Chevra T'hilim</b> 607 Effingham St, Portsmouth, VA 23704. The building is easy to find. 
 When I drove by, it was closed and locked. 
 The synagogue was opened in 1922 and is no longer in use. 
-See <a href=http://www.norfolkhistory.com/chevrathelim.htm>here</a> for a great deal of information about Chevra Thilim and <a href=https://www.jewishmuseumportsmouth.org/>here</a> about the current state of the building which seems to have been converted to a Jewish museum. 
+See <a href=http://www.norfolkhistory.com/chevrathelim.htm><u>here</u></a> for a great deal of information about Chevra Thilim and <a href=https://www.jewishmuseumportsmouth.org/><u>here</u></a> about the current state of the building which seems to have been converted to a Jewish museum. 
 <p></p>
 <img class="img-fluid mx-auto d-block" src='img/posts/ChevraThilim.jpg' alt="Chevra Thilim Synagogue Portsmouth VA">
 <p></p>
