--- a/_posts/2021-04-01-up-to-date-norfolk-portsmouth-virginia-historical-synagogue-jewish-cemeteries.html
+++ b/_posts/2021-04-01-up-to-date-norfolk-portsmouth-virginia-historical-synagogue-jewish-cemeteries.html
@@ -81,6 +81,8 @@ The cornerstone reads "Erected 1921". I did not notice a Star of David, but ther
 I did not get a chance to visit two cemeteries in Norfolk -  Hebrew Cemetery at 1200 Tidewater Dr, Norfolk, VA 23504 and <a href=http://bnaiisrael.org/cemetery/><u>Bnai Israel Cemetery</u></a> at 2750 Cromwell Rd, Norfolk, VA 23509. I also did not get a chance to stop at Ohef Shalom, a 103 year old Synagogue at 812 Stockley Gardens, Norfolk, VA 23507. You can read more about early Norfolk in general and Ohef Shalom in particular <a href=https://www.isjl.org/virginia-norfolk-encyclopedia.html><u>here</u></a>.
 <p></p>
 <p></p>
+Samuel Gruber who blogs about Jewish art and Synagogues wrote a post about Norfolk and Chevra T'hilim which I only discovered after I had already visited. You can read his post <a href=http://samgrubersjewishartmonuments.blogspot.com/2009/09/usa-orthodox-synagogue-restored-in.html><u>here</u></a>.
+<p></p>
 If anyone has information on how to access the locked cemeteries, please reach out so I can update the post. 
 </p>
 
