--- a/_posts/2021-04-01-up-to-date-norfolk-portsmouth-virginia-historical-synagogue-jewish-cemeteries.html
+++ b/_posts/2021-04-01-up-to-date-norfolk-portsmouth-virginia-historical-synagogue-jewish-cemeteries.html
@@ -27,19 +27,19 @@ See <a href=http://www.norfolkhistory.com/chevrathelim.htm><u>here</u></a> for a
 <img class="img-fluid mx-auto d-block" src='img/posts/ChevraThilim.jpg' alt="Chevra Thilim Synagogue Portsmouth VA">
 <p></p>
 <p></p>
-2. <b>Gomlei Chesed</b> 519 County St Portsmouth, VA 23704. The building is currently a Knights of Columbus and is easy to find. I looked briefly and was unable to find a cornerstone which makes sense as according to <a href=https://www.lva.virginia.gov/chancery/full_case_detail.asp?CFN=740-1901-052#img><u>this document</u></a> (click the 'next' link to go to page 5) the building was originally a church and was purchased by the Jewish congregation in 1901. 
+2. <b>Gomlei Chesed</b> 519 County St Portsmouth, VA 23704. The building is currently a Knights of Columbus and is easy to find. I looked briefly and was unable to find a cornerstone which makes sense as according to <a href=https://www.lva.virginia.gov/chancery/full_case_detail.asp?CFN=740-1901-052#img><u>this document</u></a> (click the 'next' link to go to page 5) the building was originally a church before being purchased by the Gomlei Chesed in 1901. 
 <p></p>
 <img class="img-fluid mx-auto d-block" src='img/posts/GomleiChesed.jpg' alt="Gomlei Chesed Synagogue Portsmouth VA">
 <p></p>
 <p></p>
 3. <b>Chevra Thilim and Gomlei Chesed Cemetery</b> 3508 Bellport Ave, Portsmouth, VA 23704.
-The cemetery is across the street from the above address. The cemetery is L shaped going from Bellport Ave to George Washington Highway. The Bellport side is Chevra Thilim and the George Washington entrance is the Gomlei Chesed part. The door to the cemetery was not locked. 
+The cemetery is across the street from the above address. The cemetery is L shaped going from Bellport Ave to George Washington Highway. The Bellport side is Chevra Thilim and the George Washington side is Gomlei Chesed. The cemetery is not locked. 
 <a href=https://www.findagrave.com/cemetery/1924497/gomley-chesed-cemetery><u>Link to www.findagrave.com</u></a>
 <p></p>
 <img class="img-fluid mx-auto d-block" src='img/posts/ChevraThilimCemetery.jpg' alt="Gomlei Chesed and Chevrah Thilim Cemetery Portsmouth VA">
 <p></p>
 <p></p>
-4. <b>Workmens Circle Cemetery</b> 1123 Railroad Ave, Chesapeake, VA 23324. The cemetery is across the street from the above address. which is almost at the end of a dead end road. The cemetery was locked. 
+4. <b>Workmens Circle Cemetery</b> 1123 Railroad Ave, Chesapeake, VA 23324. The cemetery is across the street from the above address, which is almost at the end of a dead end road. The cemetery was locked. 
 <a href=https://www.findagrave.com/cemetery/52740/workmans-circle-cemetery><u>Link to www.findagrave.com</u></a>
 <p></p>
 <img class="img-fluid mx-auto d-block" src='img/posts/workmensCircleCemetery.jpg' alt="Workmens Cemetery Chesapeake VA">
@@ -58,7 +58,7 @@ The cornerstone reads "Erected 1921". I did not notice a Star of David, but ther
 <img class="img-fluid mx-auto d-block" src='img/posts/mikroKodeshKohenHands.jpg' alt="Mikro Kodesh Synagogue Norfolk VA">
 <p></p>
 <p></p>
-6. <b>Mikro Kodesh Cemetery</b> 3133 Kemet Rd, Chesapeake, VA 23325. The path that leads to the cemetery is across the street from the above address. The back of the cemetery is slightly visible from Berkley Ave but there's a fence and no gate with lots of overgrown bushes. The cemetery was locked. 
+6. <b>Mikro Kodesh Cemetery</b> 3133 Kemet Rd, Chesapeake, VA 23325. The path that leads to the cemetery is across the street from the above address. The back of the cemetery is slightly visible from Berkley Ave but is mostly blocked by a fence and overgrown bushes. The cemetery was locked. 
 <a href=https://www.findagrave.com/cemetery/2223938/berkley-cemetery><u>Link to www.findagrave.com</u></a>
 <p></p>
 <img class="img-fluid mx-auto d-block" src='img/posts/mikroKodeshCemetery.jpg' alt="Mikro Kodesh cemetery Norfolk VA">
@@ -67,7 +67,7 @@ The cornerstone reads "Erected 1921". I did not notice a Star of David, but ther
 <img class="img-fluid mx-auto d-block" src='img/posts/mikrokodeshmap.png' alt="Mikro Kodesh cemetery Norfolk VA">
 <p></p>
 <p></p>
-7. <b>Bnai Israel/United Orthodox Synagogue</b> 463 Spotswood Ave, Norfolk, VA 23517. The building is easy to find. It is an active orthodox synagogue. The building was originally the United Orthodox synagogue which was a merge of the Twentieth Street Synagogue and K’hal Chasidim from downtown. Although a lot of rooms have been added and the synagogue campus has been expanded, the main sanctuary is the original United Orthodox building. The cornerstone reads "United Orthodox Synagogue 1946". See more on the <a href=http://bnaiisrael.org/2017/08/08/a-brief-history-of-our-congregation/><u>synagogue's website</u></a>.
+7. <b>Bnai Israel/United Orthodox Synagogue</b> 463 Spotswood Ave, Norfolk, VA 23517. The building is easy to find. It is an active orthodox synagogue. The building was originally the United Orthodox synagogue which was a merge of the Twentieth Street Synagogue and K’hal Chasidim from downtown. Although many rooms have been added and the synagogue campus has been expanded, the main sanctuary is the original United Orthodox building. The cornerstone reads "United Orthodox Synagogue 1946". See more on the <a href=http://bnaiisrael.org/2017/08/08/a-brief-history-of-our-congregation/><u>synagogue's website</u></a>.
 <p></p>
 <img class="img-fluid mx-auto d-block" src='img/posts/bnaiisraelinside.jpg' alt="bnai israel synagogue Norfolk VA">
 <p></p>
@@ -78,7 +78,7 @@ The cornerstone reads "Erected 1921". I did not notice a Star of David, but ther
 <img class="img-fluid mx-auto d-block" src='img/posts/bnaiisraelcornerstone.jpg' alt="bnai israel synagogue Norfolk VA">
 <p></p>
 <p></p>
-I did not get a chance to visit two cemeteries in Norfolk -  Hebrew Cemetery at 1200 Tidewater Dr, Norfolk, VA 23504 and <a href=http://bnaiisrael.org/cemetery/><u>Bnai Israel Cemetery</u></a> at 2750 Cromwell Rd, Norfolk, VA 23509. I also did not get a chance to stop at Ohef Shalom, a 103 year old Synagogue at 812 Stockley Gardens, Norfolk, VA 23507. You can read more about early Norfolk in general and Ohef Shalom in particular <a href=https://www.isjl.org/virginia-norfolk-encyclopedia.html><u>here</u></a>.
+I did not get a chance to visit two cemeteries in Norfolk proper - Hebrew Cemetery at 1200 Tidewater Dr, Norfolk, VA 23504 and <a href=http://bnaiisrael.org/cemetery/><u>Bnai Israel Cemetery</u></a> at 2750 Cromwell Rd, Norfolk, VA 23509. I also did not get a chance to stop at Ohef Shalom, a 103 year old Synagogue at 812 Stockley Gardens, Norfolk, VA 23507. You can read more about early Jewish life in Norfolk in general and Ohef Shalom in particular <a href=https://www.isjl.org/virginia-norfolk-encyclopedia.html><u>here</u></a>.
 <p></p>
 <p></p>
 Samuel Gruber who blogs about Jewish art and Synagogues wrote a post about Norfolk and Chevra T'hilim which I only discovered after I had already visited. You can read his post <a href=http://samgrubersjewishartmonuments.blogspot.com/2009/09/usa-orthodox-synagogue-restored-in.html><u>here</u></a>.
