--- a/_posts/2020-09-02-sefarim-printed-in-Shanghai-during-WW-II.html
+++ b/_posts/2020-09-02-sefarim-printed-in-Shanghai-during-WW-II.html
@@ -8,7 +8,7 @@ permalink: "shanghai-sefarim-wwii"
 ---
 
 <h1>
-    Continuation from last post - post WW II sefarim, Mir yeshiva and others 
+    Continuation from last <a href=https://www.jewishbookfinds.com/dpcamp-newspaper-netzach-yisroel>post</a> - post WW II sefarim, Mir yeshiva and others 
 </h1>
 <p></p>
 <p>The following four sefarim are not from the DP
@@ -17,7 +17,7 @@ permalink: "shanghai-sefarim-wwii"
     about the concentration camps written right after the war, and some general sefarim printed in the DP camps.</p>
 <h2 class="section-heading">Ramban</h2>
 
-<p>Number one is a soft cover Ramban that says printed by Mir. The seller insisted it was printed in Shanghai, although
+<p>Number one is a soft cover Ramban that says printed by <a href=https://en.wikipedia.org/wiki/Mir_Yeshiva_(Brooklyn)>Mir</a>. The seller insisted it was printed in Shanghai, although
     I can't find any reference to that in the sefer itself. Lesson learned - be more vigilant and only buy something you
     can verify, at least to some minimal extent.</p>
 
