freehold post fixes

--- a/_posts/2021-05-23-Freehold-NJ-Agudath-Achim-Hebrew-benefit-cemetery-.html
+++ b/_posts/2021-05-23-Freehold-NJ-Agudath-Achim-Hebrew-benefit-cemetery-.html
@@ -3,7 +3,7 @@ layout: post
 title: Photos and directions to Agudath Achim and Hebrew Benefit Cemetery in Freehold, NJ 
 description: "2021 photos and directions to Agudath Achim and Hebrew Benefit Cemetery in Freehold, NJ"
 permalink: "up-to-date-Freehold-NJ-jewish-cemetery"
-background: 'img/posts/AgudathAchimfreeholdgate.png'
+background: 'img/bg-AgudathAchimfreeholdgate.jpg'
 ---
 
 <h1>
@@ -13,21 +13,24 @@ background: 'img/posts/AgudathAchimfreeholdgate.png'
 <p></p>
 
 <p>The Jewish cemetery is on Business Rt 33, immediately north of the Freehold mall. The cemetery was founded in the early 1900's and is made up of two groups, Agudath Achim and Hebrew Benefit Society. Agudath Achim is on the East side and Hebrew Benefit Society on the west side. 
+<p></p>
 <img class="img-fluid mx-auto d-block" src='img/posts/AgudathAchimfreeholdMap.png' alt="Agudath Achim Cemetery Freehold Map">
 <p></p>
+There's an interesting story documented on a plaqhe at the cemetery. A visiting <a href=https://kevarim.com/rabbi-avroham-yitzchok-klugman><u>Jew</u></a> was killed by a train in 1924. Each of the cemteries wanted him buried in their portion. The descision was made to bury him in the middle - half in each section. Recently, people have been <a href=https://www.thelakewoodscoop.com/news/2021/01/wednesday-the-yahrtzeit-of-the-tzadik-of-freehold.html><u>visiting this persons grave yearly on his Yahrtzeit.</u></a> 
 <p></p>
-There's an interesting story documented on a plaqhe at the cemetery. A visiting <a href=https://kevarim.com/rabbi-avroham-yitzchok-klugman><u>Jew</u> was killed by a train in 1924. Each of the cemteries wanted him buried in their portion. The descision was made to bury him in the middle - half in each section. Recently, people have been <a href=https://www.thelakewoodscoop.com/news/2021/01/wednesday-the-yahrtzeit-of-the-tzadik-of-freehold.html><u>visiting this persons grave yearly on his Yahrtzeit.</u></a> 
 <img class="img-fluid mx-auto d-block" src='img/posts/AgudathAchimfreeholdplaque.jpg' alt="Agudath Achim Cemetery Freehold Tzadik">
-<img class="img-fluid mx-auto d-block" src='img/posts/AgudathAchimfreeholdTzadik' alt="Agudath Achim Cemetery Freehold Tzadik">
-
+<p></p>
+<img class="img-fluid mx-auto d-block" src='img/posts/AgudathAchimfreeholdTzadik.jpg' alt="Agudath Achim Cemetery Freehold Tzadik">
+<p></p>
 Also burried in this cemetery are some people from the farming community of Farmingdale, NJ. Benjamin and Rose Peskin were founders of that community - Peskin Rd. in Howell is named for Benjamin. 
 <img class="img-fluid mx-auto d-block" src='img/posts/AgudathAchimfreeholdPeskin.jpg' alt="Agudath Achim Cemetery Freehold Peskin Farmingdale">
+<p></p>
 
-
-<a href=https://jwa.org/weremember/dubrovsky-gertrude><u>Gertrude Wishnick Dubrovsky</u></a> who wrote <a href=https://www.amazon.com/Land-Was-Theirs-Farmers-Studies/dp/0817305440/ref=as_li_tl?ie=UTF8&tag=61309f-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=B00072BSS4&linkId=4d3aaa1f25c3f7b255535ae44cc4354b><u>The Land Was Theirs: Jewish Farmers in the Garden State</u></a> as well as directed a <a href=https://jewishfilm.org/Catalogue/films/landwastheirs.htm><u>https://jewishfilm.org/Catalogue/films/landwastheirs.htm</u></a>film with the same title, is also burried in the cemetery. 
-
+<a href=https://jwa.org/weremember/dubrovsky-gertrude><u>Gertrude Wishnick Dubrovsky</u></a> who wrote <a href=https://www.amazon.com/Land-Was-Theirs-Farmers-Studies/dp/0817305440/ref=as_li_tl?ie=UTF8&tag=61309f-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=B00072BSS4&linkId=4d3aaa1f25c3f7b255535ae44cc4354b><u>The Land Was Theirs: Jewish Farmers in the Garden State</u></a> as well as directed a <a href=https://jewishfilm.org/Catalogue/films/landwastheirs.htm><u>film with the same title</u></a>, is also burried in the cemetery. 
+<p></p>
 <img class="img-fluid mx-auto d-block" src='img/posts/AgudathAchimfreeholdDubrovsky.jpg' alt="Agudath Achim Cemetery Freehold Dubrovsky Farmingdale">
 
+<p></p>
 The cemetery seems to always be unlocked and open to the public. 
 
 
