freehold post fixes

--- a/_posts/2021-05-23-Freehold-NJ-Agudath-Achim-Hebrew-benefit-cemetery-.html
+++ b/_posts/2021-05-23-Freehold-NJ-Agudath-Achim-Hebrew-benefit-cemetery-.html
@@ -7,12 +7,12 @@ background: 'img/bg-AgudathAchimfreeholdgate.jpg'
 ---
 
 <h1>
-    Summary of my recent visit to the Agudath Achim and Hebrew Benefit Cemetery in Freehold, NJ
+Summary of my recent visit to the Agudath Achim and Hebrew Benefit Cemetery in Freehold, NJ
 </h1>
 <p></p>
 <p></p>
 
-<p>The Jewish cemetery is on Business Rt 33, immediately north of the Freehold mall. The cemetery was founded in the early 1900's and is made up of two groups, Agudath Achim and Hebrew Benefit Society. Agudath Achim is on the East side and Hebrew Benefit Society on the west side. 
+<p>The cemetery is on <a href="https://goo.gl/maps/tkpQqitSQaqyLPhf8"><u>Business Rt 33</u></a>, immediately north of the Freehold mall. The cemetery was founded in the early 1900's and is made up of two groups, Agudath Achim and Hebrew Benefit Society. Agudath Achim is on the East side and Hebrew Benefit Society on the west side. 
 <p></p>
 <img class="img-fluid mx-auto d-block" src='img/posts/AgudathAchimfreeholdMap.png' alt="Agudath Achim Cemetery Freehold Map">
 <p></p>
@@ -23,6 +23,8 @@ There's an interesting story documented on a plaqhe at the cemetery. A visiting 
 <img class="img-fluid mx-auto d-block" src='img/posts/AgudathAchimfreeholdTzadik.jpg' alt="Agudath Achim Cemetery Freehold Tzadik">
 <p></p>
 Also burried in this cemetery are some people from the farming community of Farmingdale, NJ. Benjamin and Rose Peskin were founders of that community - Peskin Rd. in Howell is named for Benjamin. 
+<p></p>
+
 <img class="img-fluid mx-auto d-block" src='img/posts/AgudathAchimfreeholdPeskin.jpg' alt="Agudath Achim Cemetery Freehold Peskin Farmingdale">
 <p></p>
 
